--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,16 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Myšohryz
+description: Návod na stavbu autíčka pojáněného pastičkou na myši!
 theme: just-the-docs
+
+color_scheme: maker_faire
 
 url: https://just-the-docs.github.io
 
-aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+# Footer last edited timestamp
+last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
+last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
+
+
+footer_content: "Copyright &copy; 2024 Pavel Šrytr. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a>"
+#aux_links:
+#  Template Repository: https://github.com/just-the-docs/just-the-docs-template
