--- a/gh-pages/_config.yml
+++ b/gh-pages/_config.yml
@@ -4,7 +4,7 @@ theme: just-the-docs
 
 color_scheme: maker_faire
 
-url: https://just-the-docs.github.io
+url: https://pajasry.github.io/mysohryz
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -12,5 +12,5 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 
 
 footer_content: "Copyright &copy; 2024 Pavel Šrytr. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a>"
-#aux_links:
-#  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+aux_links: # remove if you don't want this link to appear on your pages
+  Template Repository: https://github.com/YOUR-USERNAME/YOUR-SITE-NAME
