Use relative url

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ theme: just-the-docs
 color_scheme: maker_faire
 
 url: https://pajasry.github.io/mysohryz
+site_url: https://pajasry.github.io/mysohryz
 
 # Footer last edited timestamp
 last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
@@ -12,5 +13,3 @@ last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https:/
 
 
 footer_content: "Copyright &copy; 2024 Pavel Šrytr. Distributed by an <a href=\"https://github.com/just-the-docs/just-the-docs/tree/main/LICENSE.txt\">MIT license.</a>"
-aux_links: # remove if you don't want this link to appear on your pages
-  Template Repository: https://github.com/YOUR-USERNAME/YOUR-SITE-NAME
